crates/weft-snapshots/tests/snapshots/react-jsx/example-heading.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-heading as react-jsx
---
function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _squash(v) {
  return v.trim().replace(/\s+/g, " ");
}

export default function WeftScreen({ data, actions, onChange }) {
  return (
    <main data-weft-id="root" aria-label="Settings">
      <h1 data-weft-id="title">Settings</h1>
      <h2 data-weft-id="subtitle">
        {!(_text(data?.section?.title).trim() === "") ? _squash(_text(data?.section?.title)) : ""}
      </h2>
    </main>
  );
}
